# lindenis-v853-external

awcast/conf/: MiniGUI.cfg
awcast/res/layout/: awcast_main.xml  dlna.xml
awcast/res/misc/: deviceDescription-MediaRenderer.ftl  serviceDescription-AVTransport.ftl  serviceDescription-ConnectionManager.ftl  serviceDescription-RenderingControl.ftl
awcast/src/: CMakeLists.txt  awcast.c  awcast.h  awcast_main_ui.c  awcast_main_ui.h  ini_config.c  ini_config.h  log.h  net_key.c  net_key.h  network_monitor.c  network_monitor.h  networkd-api.c  ubus.c  ubus.h  wireless_display.c  wireless_display.h
awcast/src/dlna/: CMakeLists.txt
awcast/src/dlna/include/: aw_dlna.h
awcast/src/tinyui/: CMakeLists.txt  Makefile  Makefile.am  install2tina.sh  ipaint.h  minigui_paint.c  tina_env.conf  tinyui.c  tinyui.h  zmetadata.c  zmetadata.h
awcast/src/tinyui/ut/: ut_tinyui.c
btmanager/src/: Makefile
btmanager/src/gatt_server/: Makefile  gatt_server.c
btmanager/src/gatt_server/include/: aw_gatt_server.h
displayd/src/: Makefile  displayInterface.cpp  displayd.cpp  hotplugListener.cpp
displayd/src/edid/: cea_vic.cpp  cea_vic.h  edid.cpp  edid.h  sunxi_edid.cpp  sunxi_edid.h
displayd/src/include/: displayInterface.h  sunxi_display2.h  utils.h
displayd/src/policy/: DisplayPolicy.cpp  DisplayPolicy.h  platform-sun8iw7p1.h
displayd/src/utils/: disprslfile.cpp  utils.cpp
eyesee-mpp/dragonboard/: Makefile  README.md
eyesee-mpp/dragonboard/include/dragonboard/: dragonboard.h
eyesee-mpp/dragonboard/lib/: Makefile
flutter-sunxi/flutter-embedded-linux/: CMakeLists.txt  compile.sh
flutter-sunxi/flutter-embedded-linux/.mygit/: FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
flutter-sunxi/flutter-embedded-linux/.mygit/logs/: HEAD
flutter-sunxi/flutter-embedded-linux/cmake/: build.cmake  cross-toolchain-aarch64-clang.cmake  generate_wayland_protocols.cmake  package.cmake
flutter-sunxi/flutter-sunxi/: .gitignore  CMakeLists.txt  FlutterEmbedderSUNXI.cc  README.md
flutter-sunxi/flutter-sunxi/drivers/: evdev.cc  evdev.h  sunxiegl.cc  sunxiegl.h  sunxifb.cc  sunxifb.h
flutter-sunxi/flutter-sunxi/flutter-sunxi-release/: readme.txt  release.txt
flutter-sunxi/flutter-sunxi/flutter-sunxi-release/arm64/: flutter_eglfs  flutter_fbdev
flutter-sunxi/flutter-sunxi/linux_embedded/: system_utils.cc  system_utils.h  task_runner.cc  task_runner.h
flutter-sunxi/flutter-sunxi/script/: compile_app.sh  compile_engine.sh  compile_sunxi.sh  release.sh
libcedarc/: Makefile.am  configure  configure.ac
libcedarc/base/: Makefile.in
libcedarc/base/cdcIniparser/: cdcIniparserapi.c
libcedarc/base/filesink/: CdcBSSink.c  CdcPicSink.c
libcedarc/base/include/: cdc_log.h  cdc_version.h
libcedarc/config/: cedarc.conf
libcedarc/demo/vdecoderDemo/: rawStreamParser.c  vdecoderDemo.c
libcedarc/demo/vencoderDemo/: EncoderTest.c
libcedarc/include/: vdecoder.h  vencoder.h
libcedarc/memory/ionMemory/: ionAlloc.c
libcedarc/memory/secureMemory/: secureAlloc.c
libcedarc/vdecoder/: vdecoder.c
libcedarc/vdecoder/aftertreatment/: aftertreatment.c
libcedarc/vdecoder/fbm/: fbm.c
libcedarc/vencoder/: vencoder.c
libcedarx/: Makefile.am  Makefile.inc  configure.ac
libcedarx/android_adapter/metadataretriever/: awmetadataretriever.cpp
libcedarx/android_adapter/output/: layerControl.cpp  soundControl.cpp
libcedarx/awrecorder/: Android.bp_d
libcedarx/conf/: h133_linux_cedarx.conf
libcedarx/demo/: Makefile.am
libcedarx/demo/demoVencoder/: Android.bp_s
libcedarx/demo/parserdemo/: Android.mk
libcedarx/demo/recoderdemo/: Android.bp_d  Makefile.am
libcedarx/demo/xplayerdemo/: Makefile.am  xplayerdemo.c
libcedarx/demo/xplayerdemo2/: Makefile.am  xplayerdemo2.c
libcedarx/demo/xplayerdemo_deprecated/: sunxi_display2.h
libcedarx/libcore/base/: CdxSocketUtil.c
libcedarx/libcore/base/include/: CdxList.i  cdx_log.h
libcedarx/libcore/parser/avi/: CdxAviDepack.c
libcedarx/libcore/parser/base/: CdxParser.c  Makefile.am  VideoSpecificData.c
libcedarx/libcore/parser/flv/: CdxFlvParser.c
libcedarx/libcore/parser/hls/: CdxHlsParser.c  CdxHlsParser.h  M3UParser.c  M3UParser.h
libcedarx/libcore/parser/include/: CdxParser.h
libcedarx/libcore/parser/ts/: Android.bp_s  Android.mk  CdxDecryptor.c  CdxDecryptor.h  CdxTsParser.c  CdxTsParser.h  Makefile.am
libcedarx/libcore/playback/: player.c  player_i.h  videoDecComponent.c  videoRenderComponent_newDisplay.c
libcedarx/platform/: Makefile.am
libcedarx/platform/tina/: CdxIon.c  CdxIon.h  Makefile.am  disputils.c  disputils.h  disputils2.c  disputils2.h  layerControl_de.c  layerControl_de2.c  soundControl_alsa.c  sunxi_display.h  sunxi_display2.h  tinasoundcontrol.c
libcedarx/platform/tina/etc/config/: volume
libcedarx/xplayer/: Makefile.am  demuxComponent.c  xplayer.c
libcedarx/xplayer/include/: xplayer.h
minigui/src/ial/: sunxikeytslib.c
minigui/src/kernel/: event.c  init.c
minigui_aw/: tags
minigui_aw/smart-music-player/src/: Makefile
miracast2/src/etc/: p2p_supplicant_gc.conf
miracast2/src/libwfd2/: .gitignore  Makefile.am  WFDMessageQueue.h  WFDPlayer2.h  main_test.c  miracast2.cpp  miracast2.h  wpa_cli.c  wpa_cli.h
miracast2/src/libwfd2/include/: wfd_player.h
mtop/src/: mtop.c
multimedia/libcedarc/: Makefile  Makefile.in  aclocal.m4  ar-lib  compile  config.guess  config.h  config.h.in  config.status  configure  depcomp  install-sh  libtool  ltmain.sh  missing
multimedia/libcedarc/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
multimedia/libcedarc/base/: Makefile  Makefile.in
multimedia/libcedarc/memory/: Makefile  Makefile.in
multimedia/libcedarc/openmax/: Makefile  Makefile.in
multimedia/libcedarc/vdecoder/: Makefile  Makefile.in
multimedia/libcedarc/vencoder/: Makefile  Makefile.in
multimedia/tplayer/awsink/: tlayer_ctrl.c
networkd/src/: Makefile  client.c  networkd.c  networkd_api.c  ubus.c  wifi_manager.c
networkd/src/include/: log.h  networkd.h  networkd_api.h  ubus.h  wifi_manager.h
tinymp3/src/: Makefile
(+136 files in other folders)
